add_subdirectory(c)

add_test(01-connect-success ./01-connect-success.py)
add_test(01-connect-invalid-protonum ./01-connect-invalid-protonum.py)
add_test(01-connect-invalid-id-0 ./01-connect-invalid-id-0.py)
add_test(01-connect-invalid-id-0-311 ./01-connect-invalid-id-0-311.py)
add_test(01-connect-invalid-id-missing ./01-connect-invalid-id-missing.py)
add_test(01-connect-anon-denied ./01-connect-anon-denied.py)
add_test(01-connect-uname-no-password-denied ./01-connect-uname-no-password-denied.py)
add_test(01-connect-uname-password-denied ./01-connect-uname-password-denied.py)
if (${WITH_TLS} STREQUAL ON)
    add_test(01-connect-uname-password-success ./01-connect-uname-password-success.py)
else (${WITH_TLS} STREQUAL ON)
    add_test(01-connect-uname-password-success-no-tls ./01-connect-uname-password-success-no-tls.py)
endif (${WITH_TLS} STREQUAL ON)

add_test(02-subscribe-qos0 ./02-subscribe-qos0.py)
add_test(02-subscribe-qos1 ./02-subscribe-qos1.py)
add_test(02-subscribe-qos2 ./02-subscribe-qos2.py)
add_test(02-subpub-qos0 ./02-subpub-qos0.py)
add_test(02-subpub-qos1 ./02-subpub-qos1.py)
add_test(02-subpub-qos2 ./02-subpub-qos2.py)
add_test(02-unsubscribe-qos0 ./02-unsubscribe-qos0.py)
add_test(02-unsubscribe-qos1 ./02-unsubscribe-qos1.py)
add_test(02-unsubscribe-qos2 ./02-unsubscribe-qos2.py)

add_test(03-publish-qos1 ./03-publish-qos1.py)
add_test(03-publish-qos2 ./03-publish-qos2.py)
add_test(03-publish-b2c-disconnect-qos1 ./03-publish-b2c-disconnect-qos1.py)
add_test(03-publish-c2b-disconnect-qos2 ./03-publish-c2b-disconnect-qos2.py)
add_test(03-publish-b2c-disconnect-qos2 ./03-publish-b2c-disconnect-qos2.py)
add_test(03-pattern-matching ./03-pattern-matching.py)

add_test(04-retain-qos0 ./04-retain-qos0.py)
add_test(04-retain-qos0-fresh ./04-retain-qos0-fresh.py)
add_test(04-retain-qos0-repeated ./04-retain-qos0-repeated.py)
add_test(04-retain-qos1-qos0 ./04-retain-qos1-qos0.py)
add_test(04-retain-qos0-clear ./04-retain-qos0-clear.py)

add_test(05-clean-session-qos1 ./05-clean-session-qos1.py)

add_test(06-bridge-reconnect-local-out ./06-bridge-reconnect-local-out.py)
add_test(06-bridge-br2b-disconnect-qos1 ./06-bridge-br2b-disconnect-qos1.py)
add_test(06-bridge-br2b-disconnect-qos2 ./06-bridge-br2b-disconnect-qos2.py)
add_test(06-bridge-b2br-disconnect-qos1 ./06-bridge-b2br-disconnect-qos1.py)
add_test(06-bridge-b2br-disconnect-qos2 ./06-bridge-b2br-disconnect-qos2.py)

add_test(07-will-qos0 ./07-will-qos0.py)
add_test(07-will-null ./07-will-null.py)
add_test(07-will-null-topic ./07-will-null-topic.py)

if (${WITH_TLS} STREQUAL ON)
    add_test(08-ssl-connect-no-auth ./08-ssl-connect-no-auth.py)
    add_test(08-ssl-connect-no-auth-wrong-ca ./08-ssl-connect-no-auth-wrong-ca.py)
    add_test(08-ssl-connect-cert-auth ./08-ssl-connect-cert-auth.py)
    add_test(08-ssl-connect-cert-auth-without ./08-ssl-connect-cert-auth-without.py)
    add_test(08-ssl-connect-cert-auth-expired ./08-ssl-connect-cert-auth-expired.py)
    add_test(08-ssl-connect-cert-auth-revoked ./08-ssl-connect-cert-auth-revoked.py)
    add_test(08-ssl-connect-cert-auth-crl ./08-ssl-connect-cert-auth-crl.py)
    add_test(08-ssl-connect-identity ./08-ssl-connect-identity.py)
    add_test(08-ssl-connect-no-identity ./08-ssl-connect-no-identity.py)
    add_test(08-ssl-bridge ./08-ssl-bridge.py)
    add_test(08-tls-psk-pub ./08-tls-psk-pub.py)
    add_test(08-tls-psk-bridge ./08-tls-psk-bridge.py)
endif (${WITH_TLS} STREQUAL ON)

add_test(09-plugin-auth-unpwd-success ./09-plugin-auth-unpwd-success.py)
add_test(09-plugin-auth-unpwd-fail ./09-plugin-auth-unpwd-fail.py)

add_test(10-listener-mount-point ./10-listener-mount-point.py)
