add_subdirectory(c)
add_subdirectory(cpp)

foreach(lang c cpp)
    add_test(01-con-discon-success-${lang} ./01-con-discon-success.py ${lang}/01-con-discon-success.test)
    add_test(01-will-set-${lang} ./01-will-set.py ${lang}/01-will-set.test)
    add_test(01-unpwd-set-${lang} ./01-unpwd-set.py ${lang}/01-unpwd-set.test)
    add_test(01-will-unpwd-set-${lang} ./01-will-unpwd-set.py ${lang}/01-will-unpwd-set.test)
    add_test(01-no-clean-session-${lang} ./01-no-clean-session.py ${lang}/01-no-clean-session.test)
    add_test(01-keepalive-pingreq-${lang} ./01-keepalive-pingreq.py ${lang}/01-keepalive-pingreq.test)
    add_test(02-subscribe-qos0-${lang} ./02-subscribe-qos0.py ${lang}/02-subscribe-qos0.test)
    add_test(02-subscribe-qos1-${lang} ./02-subscribe-qos1.py ${lang}/02-subscribe-qos1.test)
    add_test(02-subscribe-qos2-${lang} ./02-subscribe-qos2.py ${lang}/02-subscribe-qos2.test)
    add_test(02-unsubscribe-${lang} ./02-unsubscribe.py ${lang}/02-unsubscribe.test)
    add_test(03-publish-qos0-${lang} ./03-publish-qos0.py ${lang}/03-publish-qos0.test)
    add_test(03-publish-qos0-no-payload-${lang} ./03-publish-qos0-no-payload.py ${lang}/03-publish-qos0-no-payload.test)
    add_test(03-publish-c2b-qos1-disconnect-${lang} ./03-publish-c2b-qos1-disconnect.py ${lang}/03-publish-c2b-qos1-disconnect.test)
    add_test(03-publish-c2b-qos2-${lang} ./03-publish-c2b-qos2.py ${lang}/03-publish-c2b-qos2.test)
    add_test(03-publish-c2b-qos2-disconnect-${lang} ./03-publish-c2b-qos2-disconnect.py ${lang}/03-publish-c2b-qos2-disconnect.test)
    add_test(03-publish-b2c-qos1-${lang} ./03-publish-b2c-qos1.py ${lang}/03-publish-b2c-qos1.test)
    add_test(03-publish-b2c-qos2-${lang} ./03-publish-b2c-qos2.py ${lang}/03-publish-b2c-qos2.test)
    add_test(04-retain-qos0-${lang} ./04-retain-qos0.py ${lang}/04-retain-qos0.test)
if (${WITH_TLS} STREQUAL ON)
    add_test(08-ssl-connect-no-auth-${lang} ./08-ssl-connect-no-auth.py ${lang}/08-ssl-connect-no-auth.test)
    add_test(08-ssl-connect-cert-auth-${lang} ./08-ssl-connect-cert-auth.py ${lang}/08-ssl-connect-cert-auth.test)
    add_test(08-ssl-connect-cert-auth-enc-${lang} ./08-ssl-connect-cert-auth-enc.py ${lang}/08-ssl-connect-cert-auth-enc.test)
    add_test(08-ssl-bad-cacert-${lang} ./08-ssl-bad-cacert.py ${lang}/08-ssl-bad-cacert.test)
    #add_test(08-ssl-fake-cacert-${lang} ./08-ssl-fake-cacert.py ${lang}/08-ssl-fake-cacert.test)
endif (${WITH_TLS} STREQUAL ON)
    add_test(09-util-topic-matching-${lang} ./09-util-topic-matching.py ${lang}/09-util-topic-matching.test)
    add_test(09-util-topic-tokenise-${lang} ./09-util-topic-tokenise.py ${lang}/09-util-topic-tokenise.test)
endforeach(lang)
